--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,11 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  min-height: 101%;
+  background: linear-gradient(180deg, rgba(253, 244, 244, 0.8), rgba(255,0,0,0) 100%),
+            linear-gradient(315deg, rgba(243, 180, 238, 0.8), rgba(0,255,0,0) 70.71%),
+            linear-gradient(45deg, rgba(204, 204, 255, 0.8), rgba(0,0,255,0) 70.71%);
+  font-size: small;
 }
 
 a {
