--- a/components/header.module.css
+++ b/components/header.module.css
@@ -1,11 +1,13 @@
 .navMenu {
     position: fixed;
     display: flex;
+    top: 0;
     width: 100%;
     align-items: center;
     justify-content: center;
-    background-color: rgba(37, 0, 0, 0.02);
+    background-color: rgba(255, 255, 255, 0.5);
     backdrop-filter: blur(10px);
+    
 }
 
 .navButtonContainer {
@@ -28,7 +30,7 @@
     transform: translateY(50%);
     background-color: rgb(255, 255, 255);
     border-radius: 0 0 50% 50%;
-    box-shadow: .05rem .15rem 1rem rgb(162, 145, 189);
+    box-shadow: .05rem .15rem 1rem rgb(214 183 107);
     height: 6vw;
     width: 6vw;
     min-height: 60px;
