--- a/components/header.module.css
+++ b/components/header.module.css
@@ -1,13 +1,13 @@
 .navMenu {
-    position: fixed;
+    position: relative;
     display: flex;
     top: 0;
     width: 100%;
     align-items: center;
     justify-content: center;
     background-color: rgba(255, 255, 255, 0.5);
-    backdrop-filter: blur(10px);
-    
+    backdrop-filter: blur(5px);
+    z-index: 2147483647;
 }
 
 .navButtonContainer {
@@ -19,15 +19,20 @@
 }
 
 .navButton {
+    flex: 1;
+    text-align: center;
     padding: 1vw 2vw;
-    text-shadow: .05rem .15rem 1rem rgb(162, 145, 189);
+    text-shadow: .05rem .15rem 1rem rgb(243, 180, 238);
     font-size: 1.5rem;
 }
 
+.navButton:hover {
+    color: rgb(236, 188, 67);
+    text-shadow: .05rem .15rem .5rem white;
+}
+
 .logoContainer {
-    position: relative;
-    top:-50%;
-    transform: translateY(50%);
+    align-self: center;
     background-color: rgb(255, 255, 255);
     border-radius: 0 0 50% 50%;
     box-shadow: .05rem .15rem 1rem rgb(214 183 107);
