--- a/components/image-upload/preview.module.css
+++ b/components/image-upload/preview.module.css
@@ -16,7 +16,7 @@
 .imagePreviewContainer {
   display:flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 }
 
